@@ -1,0 +1,51 @@
+/*
+ * Copyright 2002-2006 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.springframework.webflow.config;
+
+import junit.framework.TestCase;
+
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.support.ClassPathXmlApplicationContext;
+import org.springframework.webflow.conversation.impl.SessionBindingConversationManager;
+import org.springframework.webflow.execution.repository.continuation.ContinuationFlowExecutionRepository;
+import org.springframework.webflow.executor.FlowExecutorImpl;
+
+/**
+ * Test case for {@link FlowExecutorFactoryBean}.
+ * 
+ * @author Erwin Vervaet
+ */
+public class FlowExecutorFactoryBeanTests extends TestCase {
+	
+	private ApplicationContext applicationContext;
+	
+	protected void setUp() throws Exception {
+		this.applicationContext =
+			new ClassPathXmlApplicationContext("flow-executor-factory-bean.xml", BeanConfigTests.class);
+	}
+	
+	public void testSetMaxConversationsAndMaxContinuations() {
+		FlowExecutorImpl flowExecutor = (FlowExecutorImpl)applicationContext.getBean("flowExecutor0");
+		assertTrue(flowExecutor.getExecutionRepository() instanceof ContinuationFlowExecutionRepository);
+		ContinuationFlowExecutionRepository repo =
+			(ContinuationFlowExecutionRepository)flowExecutor.getExecutionRepository();
+		SessionBindingConversationManager conversationManager =
+			(SessionBindingConversationManager)repo.getConversationManager();
+		assertEquals(1, conversationManager.getMaxConversations());
+		assertEquals(10, repo.getMaxContinuations());
+	}
+
+}
